src/ufw-init-functions
#!/bin/sh
#
# ufw-init-functions: functions used by ufw-init and distribution initscripts
#
# Copyright 2008-2010 Canonical Ltd.
#
#    This program is free software: you can redistribute it and/or modify
#    it under the terms of the GNU General Public License version 3,
#    as published by the Free Software Foundation.
#
#    This program is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#    You should have received a copy of the GNU General Public License
#    along with this program.  If not, see <http://www.gnu.org/licenses/>.
#
set -e

PATH="/sbin:/bin:/usr/sbin:/usr/bin"

for s in "#CONFIG_PREFIX#/default/ufw" "#CONFIG_PREFIX#/ufw/ufw.conf" ; do
    if [ -s "$s" ]; then
        . "$s"
    else
        echo "Could not find $s (aborting)"
        exit 1
    fi
done

RULES_PATH="#CONFIG_PREFIX#/ufw"
USER_PATH="#STATE_PREFIX#"

flush_builtins() {
    error=""
    execs="iptables"
    if ip6tables -L INPUT -n >/dev/null 2>&1; then
        execs="$execs ip6tables"
    fi

    for exe in $execs
    do
        $exe -F || error="yes"
        $exe -X || error="yes"
        $exe -P INPUT ACCEPT || error="yes"
        $exe -P OUTPUT ACCEPT || error="yes"
        $exe -P FORWARD ACCEPT || error="yes"

        # now handle the mangle table
        if $exe -t mangle -L -n >/dev/null 2>&1; then
            for i in INPUT OUTPUT FORWARD PREROUTING POSTROUTING ; do
                $exe -t mangle -F $i || error="yes"
                $exe -t mangle -P $i ACCEPT || error="yes"
            done
        fi
    done

    # now handle the nat table
    if iptables -t nat -L -n >/dev/null 2>&1; then
        for i in OUTPUT PREROUTING POSTROUTING ; do
            iptables -t nat -F $i || error="yes"
            iptables -t nat -P $i ACCEPT || error="yes"
        done
    fi

    if [ "$error" = "yes" ]; then
        return 1
    fi
}

chains_command() {
    flag="$1"
    type=""
    exe="iptables"
    if [ "$2" = "6" ]; then
        type="$2"
        exe="ip6tables"
    fi

    for c in ufw$type-logging-deny ufw$type-logging-allow ufw$type-not-local ufw$type-user-logging-input ufw$type-user-limit-accept ufw$type-user-limit ufw$type-skip-to-policy-input ufw$type-reject-input ufw$type-after-logging-input ufw$type-after-input ufw$type-user-input ufw$type-before-input ufw$type-before-logging-input ufw$type-skip-to-policy-forward ufw$type-reject-forward ufw$type-after-logging-forward ufw$type-after-forward ufw$type-user-logging-forward ufw$type-user-forward ufw$type-bef [...]
        if [ "$UFW_INIT_DEBUG" = "yes" ]; then
            echo "$exe $flag $c" >&2
            $exe $flag $c || true
        else
            $exe $flag $c 2>/dev/null || true
        fi
    done
}

delete_chains() {
    chains_command -F $1
    chains_command -Z $1

    # Delete the secondary chains to reduce clutter, but keep the primary ones
    # so that the primary chains don't leave the built-in chains just to come
    # back later in a different place. This means that some (empty) chains will
    # linger until the next boot after disabling ufw.
    for c in ufw$type-logging-deny ufw$type-logging-allow ufw$type-not-local ufw$type-user-logging-input ufw$type-user-logging-output ufw$type-user-logging-forward ufw$type-user-limit-accept ufw$type-user-limit ufw$type-user-input ufw$type-user-forward ufw$type-user-output ufw$type-skip-to-policy-input ufw$type-skip-to-policy-output ufw$type-skip-to-policy-forward ; do
        if [ "$UFW_INIT_DEBUG" = "yes" ]; then
            echo "$exe $flag $c" >&2
            $exe -X $c || true
        else
            $exe -X $c 2>/dev/null || true
        fi
    done
}

restore_file() {
    e="$1"
    f="$2"
    if [ -s "$f" ]; then
        # On most systems, this will succeed on the first try and there will
        # be no additional overhead. However, on systems with upstart and an
        # optimized boot process, ufw may start very early so loading the
        # various chains occassionally take a bit longer and iptables-restore
	# may compain with 'Resource temporarily unavailable'. Account for that
        # here, and try a few times if needed.
        loaded=""
        count=0
        while [ -z "$loaded" ] && [ "$count" -lt 3 ]; do
            $e -n < "$f" 2>/dev/null || {
                count=$((count+1))
                sleep $count
                continue
            }
            loaded="yes"
        done
        # Try again to see the error, if needed
        if [ -z "$loaded" ] && ! $e -n < $f ; then
            return 1
        fi
    else
        return 1
    fi
}

ufw_start() {
    out=""
    if [ "$ENABLED" = "yes" ] || [ "$ENABLED" = "YES" ]; then
        if iptables -L ufw-user-input -n >/dev/null 2>&1 ; then
            echo "Firewall already started, use 'force-reload'"
            return 0
        fi
        for m in $IPT_MODULES
        do
            modprobe $m || true
        done

        if [ "$MANAGE_BUILTINS" = "yes" ]; then
            flush_builtins
        fi

        execs="iptables"

        # IPv6 setup
        # TODO: convert this to ip6tables-restore
        if [ "$IPV6" = "yes" ] || [ "$IPV6" = "YES" ]; then
            if ip6tables -L INPUT -n >/dev/null 2>&1; then
                execs="$execs ip6tables"
            else
                out="${out}\nProblem loading ipv6 (skipping)"
            fi
        else
            if ip6tables -L INPUT -n >/dev/null 2>&1; then
                # IPv6 support disabled but available in the kernel, so
                # default DROP and accept all on loopback
                delete_chains 6 || error="yes"

                ip6tables -P INPUT DROP || error="yes"
                ip6tables -P OUTPUT DROP || error="yes"
                ip6tables -P FORWARD DROP || error="yes"

                # delete these first so don't add multiple rules
                ip6tables -D INPUT -i lo -j ACCEPT 2>/dev/null || true
                ip6tables -D OUTPUT -o lo -j ACCEPT 2>/dev/null || true

                ip6tables -A INPUT -i lo -j ACCEPT || error="yes"
                ip6tables -A OUTPUT -o lo -j ACCEPT || error="yes"

                if [ "$error" = "yes" ]; then
                    out="${out}\nProblem loading ipv6 (skipping)"
                fi
            fi
        fi

        for exe in $execs
        do
            type=""
            if [ "$exe" = "ip6tables" ]; then
                type="6"
            fi
            BEFORE_RULES="$RULES_PATH/before${type}.rules"
            AFTER_RULES="$RULES_PATH/after${type}.rules"
            USER_RULES="$USER_PATH/user${type}.rules"

            # flush the chains (if they exist)
            if $exe -L ufw${type}-before-logging-input -n >/dev/null 2>&1 ; then
                delete_chains $type || error="yes"
            else
                input_pol="$DEFAULT_INPUT_POLICY"
                if [ "$DEFAULT_INPUT_POLICY" = "REJECT" ]; then
                    input_pol="DROP"
                fi

                output_pol="$DEFAULT_OUTPUT_POLICY"
                if [ "$DEFAULT_OUTPUT_POLICY" = "REJECT" ]; then
                    output_pol="DROP"
                fi

                forward_pol="$DEFAULT_FORWARD_POLICY"
                if [ "$DEFAULT_FORWARD_POLICY" = "REJECT" ]; then
                    forward_pol="DROP"
                fi

                # setup all the toplevel chains. Check existence of
                # ufw${type}-before-logging-input first-- if it exists, don't
                # load otherwise load all of the toplevel
                cat <<EOM | $exe-restore -n || error="yes"
*filter
# builtin chains
:INPUT $input_pol [0:0]
:FORWARD $forward_pol [0:0]
:OUTPUT $output_pol [0:0]

# primary chains
:ufw${type}-before-logging-input - [0:0]
:ufw${type}-before-logging-output - [0:0]
:ufw${type}-before-logging-forward - [0:0]
:ufw${type}-before-input - [0:0]
:ufw${type}-before-output - [0:0]
:ufw${type}-before-forward - [0:0]
:ufw${type}-after-input - [0:0]
:ufw${type}-after-output - [0:0]
:ufw${type}-after-forward - [0:0]
:ufw${type}-after-logging-input - [0:0]
:ufw${type}-after-logging-output - [0:0]
:ufw${type}-after-logging-forward - [0:0]
:ufw${type}-reject-input - [0:0]
:ufw${type}-reject-output - [0:0]
:ufw${type}-reject-forward - [0:0]
:ufw${type}-track-input - [0:0]
:ufw${type}-track-output - [0:0]

-A INPUT -j ufw${type}-before-logging-input
-A INPUT -j ufw${type}-before-input
-A INPUT -j ufw${type}-after-input
-A INPUT -j ufw${type}-after-logging-input
-A INPUT -j ufw${type}-reject-input
-A INPUT -j ufw${type}-track-input

-A OUTPUT -j ufw${type}-before-logging-output
-A OUTPUT -j ufw${type}-before-output
-A OUTPUT -j ufw${type}-after-output
-A OUTPUT -j ufw${type}-after-logging-output
-A OUTPUT -j ufw${type}-reject-output
-A OUTPUT -j ufw${type}-track-output

-A FORWARD -j ufw${type}-before-logging-forward
-A FORWARD -j ufw${type}-before-forward
-A FORWARD -j ufw${type}-after-forward
-A FORWARD -j ufw${type}-after-logging-forward
-A FORWARD -j ufw${type}-reject-forward
COMMIT
EOM
            fi

            # add reject policy
            if [ "$DEFAULT_INPUT_POLICY" = "REJECT" ]; then
                cat <<EOM | $exe-restore -n || error="yes"
*filter
-A ufw${type}-reject-input -j REJECT
COMMIT
EOM
            fi
            if [ "$DEFAULT_OUTPUT_POLICY" = "REJECT" ]; then
                cat <<EOM | $exe-restore -n || error="yes"
*filter
-A ufw${type}-reject-output -j REJECT
COMMIT
EOM
            fi
            if [ "$DEFAULT_FORWARD_POLICY" = "REJECT" ]; then
                cat <<EOM | $exe-restore -n || error="yes"
*filter
-A ufw${type}-reject-forward -j REJECT || error="yes"
COMMIT
EOM
            fi

            # add tracking policy
            if [ "$DEFAULT_INPUT_POLICY" = "ACCEPT" ]; then
                cat <<EOM | $exe-restore -n || error="yes"
*filter
-A ufw${type}-track-input -p tcp -m state --state NEW -j ACCEPT
-A ufw${type}-track-input -p udp -m state --state NEW -j ACCEPT
COMMIT
EOM
            fi

            if [ "$DEFAULT_OUTPUT_POLICY" = "ACCEPT" ]; then
                cat <<EOM | $exe-restore -n || error="yes"
*filter
-A ufw${type}-track-output -p tcp -m state --state NEW -j ACCEPT
-A ufw${type}-track-output -p udp -m state --state NEW -j ACCEPT
COMMIT
EOM
            fi

            # now setup the secondary 'logging-deny' chains
            if ! $exe -L ufw${type}-logging-deny -n >/dev/null 2>&1 ; then
                cat <<EOM | $exe-restore -n || error="yes"
*filter
:ufw${type}-logging-deny - [0:0]
:ufw${type}-logging-allow - [0:0]
COMMIT
EOM
            fi

            # now setup the secondary 'skip to policy' chains
            if ! $exe -L ufw${type}-skip-to-policy-input -n >/dev/null 2>&1 ; then
                cat <<EOM | $exe-restore -n || error="yes"
*filter
:ufw${type}-skip-to-policy-input - [0:0]
:ufw${type}-skip-to-policy-output - [0:0]
:ufw${type}-skip-to-policy-forward - [0:0]
-A ufw${type}-skip-to-policy-input -j "$DEFAULT_INPUT_POLICY"
-A ufw${type}-skip-to-policy-output -j "$DEFAULT_OUTPUT_POLICY"
-A ufw${type}-skip-to-policy-forward -j "$DEFAULT_FORWARD_POLICY"
COMMIT
EOM
            fi

            # now ip[6]tables-restore before*.rules. This resets the following
            # chains:
            #   ufw-before-input
            #   ufw-before-output
            #   ufw-before-forward
            #
            # and sets the following:
            #   ufw-not-local
            if [ -s "$BEFORE_RULES" ]; then
                if ! restore_file $exe-restore "$BEFORE_RULES" ; then
                    out="${out}\nProblem running '$BEFORE_RULES'"
                    error="yes"
                fi
            else
                out="${out}\nCouldn't find '$BEFORE_RULES'"
                error="yes"
            fi

            # now ip[6]tables-restore after*.rules. This resets the following
            # chains:
            #   ufw-after-input
            #   ufw-after-output
            #   ufw-after-forward
            if [ -s "$AFTER_RULES" ]; then
                if ! restore_file $exe-restore "$AFTER_RULES" ; then
                    out="${out}\nProblem running '$AFTER_RULES'"
                    error="yes"
                fi
            else
                out="${out}\nCouldn't find '$AFTER_RULES'"
                error="yes"
            fi

            # user chains
            if [ -s "$USER_RULES" ]; then
                # setup the secondary 'user' chains
                if ! $exe -L ufw${type}-user-input -n >/dev/null 2>&1 ; then
                    cat <<EOM | $exe-restore -n || error="yes"
*filter
:ufw${type}-user-input - [0:0]
:ufw${type}-user-output - [0:0]
:ufw${type}-user-forward - [0:0]
:ufw${type}-user-logging-input - [0:0]
:ufw${type}-user-logging-output - [0:0]
:ufw${type}-user-logging-forward - [0:0]
:ufw${type}-user-limit - [0:0]
:ufw${type}-user-limit-accept - [0:0]
COMMIT
EOM
                fi

                # now ip[6]tables-restore user*.rules. This resets the following
                # chains:
                #   ufw-before-logging-input
                #   ufw-before-logging-output
                #   ufw-before-logging-forward
                #   ufw-after-logging-input
                #   ufw-after-logging-output
                #   ufw-after-logging-forward
                #   ufw-logging-deny
                #   ufw-logging-allow
                #   ufw-after-input
                #   ufw-after-output
                #   ufw-after-forward
                #   ufw-user-limit
                #   ufw-user-limit-accept
                if ! restore_file $exe-restore "$USER_RULES" ; then
                    out="${out}\nProblem running '$USER_RULES'"
                    error="yes"
                fi

                # now hooks these into the primary chains
                cat <<EOM | $exe-restore -n || error="yes"
*filter
-A ufw${type}-before-input -j ufw${type}-user-input
-A ufw${type}-before-output -j ufw${type}-user-output
-A ufw${type}-before-forward -j ufw${type}-user-forward
COMMIT
EOM
            else
                out="${out}\nCouldn't find '$USER_RULES'"
                error="yes"
            fi
        done

        if [ ! -z "$IPT_SYSCTL" ] && [ -s "$IPT_SYSCTL" ]; then
            sysctl -e -q -p $IPT_SYSCTL || true
        fi

        if [ "$error" = "yes" ]; then
            /bin/echo -e "$out"
            return 1
        fi
    else
        out="Skip starting firewall: ufw (not enabled)"
    fi
    if [ ! -z "$out" ]; then
        /bin/echo -e "$out"
    fi
}

ufw_stop() {
    if [ "$1" != "--force" ] && [ "$ENABLED" != "yes" ] && [ "$ENABLED" != "YES" ]; then
        echo "Skip stopping firewall: ufw (not enabled)"
        return 0
    fi

    # If we manage the builtins, just return
    if [ "$MANAGE_BUILTINS" = "yes" ]; then
        flush_builtins || return 1
        return 0
    fi

    error=""
    execs="iptables"
    if ip6tables -L INPUT -n >/dev/null 2>&1; then
        execs="$execs ip6tables"
    fi

    for exe in $execs
    do
        type=""
        if [ "$exe" = "ip6tables" ]; then
            type="6"
        fi
        delete_chains $type || error="yes"
        $exe -P INPUT ACCEPT || error="yes"
        $exe -P OUTPUT ACCEPT || error="yes"
        $exe -P FORWARD ACCEPT || error="yes"
    done

    if [ "$error" = "yes" ]; then
        return 1
    fi
    return 0
}

ufw_reload() {
    if [ "$ENABLED" = "yes" ] || [ "$ENABLED" = "YES" ]; then
        ufw_stop || return "$?"
        ufw_start || return "$?"
    else
        echo "Skipping $1 (not enabled)"
    fi
    return 0
}

ufw_status() {
    err=""
    iptables -L ufw-user-input -n >/dev/null 2>&1 || {
        echo "Firewall is not running"
        return 3
    }

    if [ "$IPV6" = "yes" ] || [ "$IPV6" = "YES" ]; then
        ip6tables -L ufw6-user-input -n >/dev/null 2>&1 || {
            # unknown state: ipv4 ok, but ipv6 isn't
            echo "Firewall in inconsistent state (IPv6 enabled but not running)"
            return 4
        }
    fi

    echo "Firewall is running"
    return 0
}
